"#" items refer to tickets. See <http://dev.openguides.org/report/9> for details.

More detailed changelogs can be found at
<http://dev.openguides.org/log/trunk>.

0.71    ?
        Added scale to category/locale index maps.
        Fix several test failures triggered by the stricter
          Test::HTML::Content (et al) found in current Debian unstable.

0.70    26 August 2012
        New elements allowed in page content: span, dl, dt, dd (fixes #303).
        Changed external link formatting; they're now given a class of
          "external" and the previous hardcoded square brackets are no more.
          This requires version 0.24 of Wiki::Toolkit::Formatter::UseMod.
          If you want the old behaviour back, put this in your CSS (with
          "black" replaced by whatever colour you have your body text in):
              a.external:before {
                content: "[";
                color: black;
              }

              a.external:after {
                content: "]";
                color: black;
              }
        Updated to use version 0.4 of Leaflet (needed for plugins used on a
          couple of live guides).
        Added meta descriptions to headers of map and list index pages
          (fixes #301).
        Implemented new @INDEX_LIST_NO_PREFIX macro.

0.69    07 July 2012
        The output of the "show_missing_metadata" action is now alphabetised.
        There's also now an option to view the results on a map. (#296 & #294).
        Fixed a JavaScript escaping issue for nodes with apostrophes in names.

0.68    21 May 2012
        Made sure that maps are centred and zoomed properly even when they only
          contain one point.
        Made preferences default to never expiring.
        Fixed POST bug introduced with whitespace redirection in version 0.66.

0.67    07 May 2012
        Switched from the Google Maps API to the Leaflet mapping library.
          To make this work, set use_leaflet = 1 in your wiki.conf, and ensure