@@ -6,7 +6,10 @@ More detailed changelogs can be found at
 0.71    ?
         Added scale to category/locale index maps.
         Fix several test failures triggered by the stricter
-          Test::HTML::Content (et al) found in current Debian unstable.
+          Test::HTML::Content (et al) mode used when XML::LibXML is
+          not installed
+        Work around a "No such method textContent" bug in
+        Test::HTML::Content when XML::LibXML is not installed
 
 0.70    26 August 2012
         New elements allowed in page content: span, dl, dt, dd (fixes #303).
